--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3710,3 +3710,24 @@
 		}
 
 	}
+
+.service {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 72px;
+}
+
+i {
+    font-size: 122px;
+}
+
+.service-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.service-box h4 {
+    font-size: 16px;
+    padding-top: 8px;
+}
