--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3426,7 +3426,7 @@
 			}
 
 			.wrapper.spotlight.style2 {
-				background-color: #45558d;
+				background-color: #8d4545;
 			}
 
 				.wrapper.spotlight.style2:before, .wrapper.spotlight.style2:after {
@@ -3434,7 +3434,7 @@
 				}
 
 			.wrapper.spotlight.style3 {
-				background-color: #3f4e85;
+				background-color: #853f3f;
 			}
 
 				.wrapper.spotlight.style3:before, .wrapper.spotlight.style3:after {
@@ -3442,7 +3442,7 @@
 				}
 
 			.wrapper.spotlight.style4 {
-				background-color: #39477c;
+				background-color: #7c3939;
 			}
 
 				.wrapper.spotlight.style4:before, .wrapper.spotlight.style4:after {
@@ -3450,7 +3450,7 @@
 				}
 
 			.wrapper.spotlight.style5 {
-				background-color: #324072;
+				background-color: #723232;
 			}
 
 				.wrapper.spotlight.style5:before, .wrapper.spotlight.style5:after {
@@ -3458,7 +3458,7 @@
 				}
 
 			.wrapper.spotlight.style6 {
-				background-color: #2d3a69;
+				background-color: #692d2d;
 			}
 
 				.wrapper.spotlight.style6:before, .wrapper.spotlight.style6:after {
